# kodi-cmake

./: .gitignore  Makefile.in  Makefile.include.in  README.md  bootstrap.mk  codegenerator.mk  configure.ac  configure.in  version.txt
lib/libsquish/: CMakeLists.txt
project/cmake/: CMakeLists.txt
project/cmake/Modules/: FindASS.cmake  FindAfpClient.cmake  FindAlsa.cmake  FindAvahi.cmake  FindBluray.cmake  FindCEC.cmake  FindCpluff.cmake  FindCurl.cmake  FindDbus.cmake  FindFFMPEG.cmake  FindFreeType.cmake  FindFribidi.cmake  FindLame.cmake  FindLibDvd.cmake  FindLibSmbClient.cmake  FindLibUSB.cmake  FindLzo2.cmake  FindMicroHttpd.cmake  FindModplug.cmake  FindMpeg2.cmake  FindMySqlClient.cmake  FindOgg.cmake  FindOpenGl.cmake  FindPlist.cmake  FindPulseAudio.cmake  FindPython.cmake  FindSampleRate.cmake  FindSdl.cmake  FindShairplay.cmake  FindShairport.cmake  FindSqlite3.cmake  FindTagLib.cmake  FindTinyXML.cmake  FindUDev.cmake  FindVAAPI.cmake  FindVorbis.cmake  FindVorbisEnc.cmake  FindVorbisFile.cmake  FindX.cmake  FindXRandR.cmake  (+1 more)
project/cmake/Scripts/: ArchSetup.cmake  InstallLinux.cmake  Macros.cmake  XbmcArchSetup.cmake  XbmcInstallLinux.cmake  XbmcMacros.cmake
project/cmake/addons/: CMakeLists.txt
project/cmake/bootstrap/: CMakeLists.txt  scrapers.txt  separates.txt  skin.touched.txt
project/cmake/depends/: CMakeLists.txt
project/cmake/installdata/: Windows.txt  addon-bindings.txt  test-reference-data.txt
project/cmake/modules/: FindAfpClient.cmake  FindBluray.cmake  FindCEC.cmake  FindCdio.cmake  FindCpluff.cmake  FindCrossGUID.cmake  FindCurl.cmake  FindFFMPEG.cmake  FindFLAC.cmake  FindFreeType.cmake  FindGnuTls.cmake  FindLibDvd.cmake  FindLibSmbClient.cmake  FindLinuxJoystick.cmake  FindMAD.cmake  FindNFS.cmake  FindOpenGl.cmake  FindPCRE.cmake  FindPlist.cmake  FindPulseAudio.cmake  FindPython.cmake  FindRTMP.cmake  FindSSH.cmake  FindSWIG.cmake  FindSampleRate.cmake  FindSdl.cmake  FindShairplay.cmake  FindShairport.cmake  FindSqlite3.cmake  FindTagLib.cmake  FindUDev.cmake  FindUUID.cmake  FindVAAPI.cmake  FindVDPAU.cmake  FindVorbisFile.cmake  FindWayland.cmake  FindX.cmake  FindXslt.cmake  FindYajl.cmake
project/cmake/scripts/: ArchSetup.cmake  InstallLinux.cmake  Macros.cmake  PathSetup.cmake  ProjectMacros.cmake  xbmc-addon-helpers.cmake
project/cmake/templates/: kodi-addon-helpers.cmake.in  kodi-config.cmake.in  xbmc-addon-helpers.cmake.in  xbmc-config.cmake.in  xbmc-config.cmake.win32
project/cmake/treedata/: common.txt  subdirs-common.txt  subdirs-linux.txt  subdirs-nonfree.txt
tools/TexturePacker/: CMakeLists.txt
xbmc/cores/DllLoader/: CMakeLists.txt  DllLoader.cpp  DllLoaderContainer.cpp  Win32DllLoader.cpp  dll.cpp  dll_tracker_file.cpp  dll_tracker_library.cpp
xbmc/cores/dvdplayer/: CMakeLists.txt  DVDAudio.cpp  DVDFileInfo.cpp  DVDFileInfo.h  DVDPlayer.cpp  DVDPlayer.h  DVDPlayerSubtitle.cpp  DVDPlayerVideo.cpp  Makefile.in
xbmc/input/: ButtonTranslator.cpp  ButtonTranslator.h  CMakeLists.txt  IInputHandler.h  InputManager.cpp  InputManager.h  Joystick.cpp  Joystick.h  JoystickHat.cpp  JoystickHat.h  JoystickManager.cpp  JoystickManager.h  Key.cpp  Key.h  Key.help  KeyboardStat.cpp  KeyboardStat.h  Makefile  XBMC_keytable.cpp
xbmc/input/joysticks/: ButtonPrimitive.cpp  ButtonPrimitive.h  CMakeLists.txt  IJoystickActionHandler.h  IJoystickButtonMap.h  IJoystickFeatureHandler.h  IJoystickInputHandler.h  IJoystickInputHandling.cpp  IJoystickInputHandling.h  IJoystickRawInputHandler.h  InputPrimitive.cpp  InputPrimitive.h  JoystickManager.cpp  JoystickManager.h  JoystickPort.cpp  JoystickPort.h  JoystickTypes.h  Makefile  PlayerManager.cpp  PlayerManager.h
xbmc/input/linux/: CMakeLists.txt  LIRC.cpp  LinuxJoystick.cpp  LinuxJoystick.h  LinuxJoystickSDL.cpp  LinuxJoystickSDL.h  Makefile.in
xbmc/input/touch/: CMakeLists.txt
xbmc/input/windows/: CMakeLists.txt  WINJoystickDX.cpp  WINJoystickDX.h  WINJoystickXInput.cpp  WINJoystickXInput.h
xbmc/interfaces/python/: CMakeLists.txt  PythonInvoker.cpp  PythonSwig.cpp.template  swig.cpp
xbmc/interfaces/swig/: AddonModuleXbmcgui.i  AddonModuleXbmcmod_python.i  CMakeLists.txt
xbmc/music/: CMakeLists.txt  GUIViewStateMusic.cpp  MusicDatabase.cpp  MusicDatabase.h
xbmc/music/dialogs/: CMakeLists.txt  GUIDialogMusicOSD.cpp
xbmc/music/infoscanner/: CMakeLists.txt  MusicInfoScanner.cpp
xbmc/music/karaoke/: CMakeLists.txt  karaokelyricstextkar.cpp  karaokelyricstextlrc.cpp  karaokelyricstextustar.cpp  karaokevideobackground.h
xbmc/music/tags/: CMakeLists.txt  MusicInfoTag.cpp  MusicInfoTag.h  MusicInfoTagLoaderFFmpeg.cpp  MusicInfoTagLoaderFFmpeg.h  MusicInfoTagLoaderFactory.cpp  TagLoaderTagLib.cpp  TagLoaderTagLib.h
xbmc/music/windows/: CMakeLists.txt  GUIWindowMusicBase.cpp  GUIWindowMusicNav.cpp  GUIWindowMusicNav.h  GUIWindowMusicPlaylist.cpp  GUIWindowMusicPlaylistEditor.cpp  GUIWindowMusicSongs.cpp
xbmc/network/: AirPlayServer.cpp  AirTunesServer.cpp  CMakeLists.txt  DNSNameCache.cpp  DNSNameCache.h  EventServer.cpp  GUIDialogNetworkSetup.cpp  Network.cpp  WakeOnAccess.cpp  WebServer.cpp  cddb.cpp
xbmc/network/dacp/: CMakeLists.txt
xbmc/network/httprequesthandler/: CMakeLists.txt  HTTPJsonRpcHandler.cpp  HTTPPythonHandler.cpp  HTTPWebinterfaceHandler.cpp
xbmc/network/linux/: CMakeLists.txt  NetworkLinux.cpp
xbmc/network/osx/: CMakeLists.txt  ZeroconfOSX.cpp
xbmc/network/upnp/: CMakeLists.txt  Makefile.in  UPnP.cpp  UPnP.h  UPnPInternal.cpp  UPnPMediaImporter.cpp  UPnPMediaImporter.h  UPnPServer.cpp
xbmc/network/websocket/: CMakeLists.txt  WebSocketV13.cpp  WebSocketV8.cpp
xbmc/network/windows/: CMakeLists.txt
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  AudioDSPSettings.cpp  AudioDSPSettings.h  CMakeLists.txt  DisplaySettings.cpp  DisplaySettings.h  MediaSettings.cpp  MediaSourceSettings.cpp  MediaSourceSettings.h  SettingConditions.cpp  SettingControl.cpp  Settings.cpp  VideoSettings.cpp  VideoSettings.h
xbmc/settings/dialogs/: CMakeLists.txt  GUIDialogAudioDSPManager.cpp  GUIDialogAudioDSPManager.h  GUIDialogAudioDSPSettings.cpp  (+6 more)
(+1337 files in other folders)
